--- a/calc.html
+++ b/calc.html
@@ -22,10 +22,10 @@
             </div>
           </fieldset>
         </form>
-        <nav role="navigation">
+        <nav>
           <a href="#/calc" title="새 창에서 계산기 화면 열림" target="_blank"><i class="fa-solid fa-calculator"></i>calculator</a>
           <a href="#/bmi" title="새 창에서 bmi수치 계산 화면 열림" target="_blank"><i class="fa-solid fa-weight-scale"></i>bmi</a>
-          <a href="#/dday" title="새 창에서 디데이 화면 열림" title="_blank"><i class="fa-solid fa-calendar-days"></i>dday</a>
+          <a href="#/dday" title="새 창에서 디데이 화면 열림" target="_blank"><i class="fa-solid fa-calendar-days"></i>dday</a>
         </nav>
       </section>
     </div>
