--- a/sunshine.html
+++ b/sunshine.html
@@ -52,10 +52,10 @@
 <script src="./js/nav.js"></script> <!-- 전체페이지에서 호출 -->
   <header>
     <div class="top">
-      <nav class="member" role="navigation">
-        <a alt="처음으로" href="./index.php">처음으로</a>
-        <a alt="로그인" href="#">로그인</a>
-        <a alt="회원가입" href="#">회원가입</a>
+      <nav class="member">
+        <a title="처음으로" href="./index.php">처음으로</a>
+        <a title="로그인" href="#">로그인</a>
+        <a title="회원가입" href="#">회원가입</a>
       </nav>
     </div><!-- top -->
 
@@ -67,99 +67,98 @@
       <span class="hidden" aria-hidden="true">선샤인</span>
       </h1>
 
-      <nav class="gnb lg" role="navigation">
-        <ul id="menu" role="tree"><!-- depth -->
-          <li id="menu" role="treeitem" class="menu1">
-            <a alt="회사소개 인사말 페이지로 이동" href="./greet.php">
+      <nav class="gnb lg">
+        <ul role="tree"><!-- depth -->
+          <li role="treeitem" class="menu1">
+            <a title="회사소개 인사말 페이지로 이동" href="./greet.php">
               <span>회사소개</span>
               <span class="en">company</span>
             </a>
             <h6>회사소개</h6>
-            <ul id="sidebar-menu" role="group">
-              <li id="menu" role="treeitem"><a alt="인사말 페이지로 이동" class="menu1-1" href="./greet.php">인사말</a></li>
-              <li id="menu" role="treeitem"><a alt="오시는 길 페이지로 이동" class="menu1-2" href="./location.php">오시는 길</a></li>
-              <li id="menu" role="treeitem"><a alt="홍보영상 페이지로 이동" class="menu1-3" href="./video.php">홍보영상</a></li>
+            <ul role="group">
+              <li role="treeitem"><a title="인사말 페이지로 이동" class="menu1-1" href="./greet.php">인사말</a></li>
+              <li role="treeitem"><a title="오시는 길 페이지로 이동" class="menu1-2" href="./location.php">오시는 길</a></li>
+              <li role="treeitem"><a title="홍보영상 페이지로 이동" class="menu1-3" href="./video.php">홍보영상</a></li>
             </ul>
           </li><!-- 1 -->
-          <li id="menu" role="treeitem" class="menu2">
-            <a alt="사업분야 사업소개 페이지로 이동" href="./biz-intro.php">
+          <li role="treeitem" class="menu2">
+            <a title="사업분야 사업소개 페이지로 이동" href="./biz-intro.php">
               <span>사업분야</span>
               <span class="en">business</span>
             </a>
             <h6>사업분야</h6>
-            <ul id="sidebar-menu" role="group">
-              <li id="menu" role="treeitem"><a alt="사업소개 페이지로 이동" class="menu2-1" href="./biz-intro.php">사업소개</a></li>
-              <li id="menu" role="treeitem"><a alt="사업분야 페이지로 이동" class="menu2-2" href="./biz-area.php">사업분야</a></li>
+            <ul role="group">
+              <li role="treeitem"><a title="사업소개 페이지로 이동" class="menu2-1" href="./biz-intro.php">사업소개</a></li>
+              <li role="treeitem"><a title="사업분야 페이지로 이동" class="menu2-2" href="./biz-area.php">사업분야</a></li>
             </ul>
           </li><!-- 2 -->
-          <li id="menu" role="treeitem" class="menu3">
-            <a alt="갤러리 float 페이지로 이동" href="./gallery1.php">
+          <li role="treeitem" class="menu3">
+            <a title="갤러리 float 페이지로 이동" href="./gallery1.php">
               <span>갤러리</span>
               <span class="en">gallery</span>
             </a>
             <h6>갤러리</h6>
-            <ul id="sidebar-menu" role="group">
-              <li id="menu" role="treeitem"><a alt="float 페이지로 이동" class="menu3-1" href="./gallery1.php">float</a></li>
-              <li id="menu" role="treeitem"><a alt="flex 페이지로 이동" class="menu3-2" href="./gallery2.php">flex</a></li>
-              <li id="menu" role="treeitem"><a alt="grid 페이지로 이동" class="menu3-3" href="./gallery3.php">grid</a></li>
-              <li id="menu" role="treeitem"><a alt="masonry 페이지로 이동" class="menu3-4" href="./gallery4.php">masonry</a></li>
-              <li id="menu" role="treeitem"><a alt="masonry isotope 페이지로 이동" class="menu3-5" href="./gallery5.php">masonry isotope</a></li>
+            <ul role="group">
+              <li role="treeitem"><a title="float 페이지로 이동" class="menu3-1" href="./gallery1.php">float</a></li>
+              <li role="treeitem"><a title="flex 페이지로 이동" class="menu3-2" href="./gallery2.php">flex</a></li>
+              <li role="treeitem"><a title="grid 페이지로 이동" class="menu3-3" href="./gallery3.php">grid</a></li>
+              <li role="treeitem"><a title="masonry 페이지로 이동" class="menu3-4" href="./gallery4.php">masonry</a></li>
+              <li role="treeitem"><a title="masonry isotope 페이지로 이동" class="menu3-5" href="./gallery5.php">masonry isotope</a></li>
             </ul>
           </li><!-- 3 -->
-          <li id="menu" role="treeitem" class="menu4">
-            <a alt="온라인문의 페이지로 이동" href="./contact.php">
+          <li role="treeitem" class="menu4">
+            <a title="온라인문의 페이지로 이동" href="./contact.php">
               <span>온라인문의</span>
               <span class="en">online</span>
             </a>
             <h6>온라인문의</h6>
-            <ul id="sidebar-menu" role="group">
-              <li id="menu" role="treeitem"><a alt="온라인문의 페이지로 이동" class="menu4-1" href="./contact.php">온라인문의</a></li>
+            <ul role="group">
+              <li role="treeitem"><a title="온라인문의 페이지로 이동" class="menu4-1" href="./contact.php">온라인문의</a></li>
             </ul>
           </li><!-- 4 -->
-          <li id="menu" role="treeitem" class="menu5">
-            <a alt="커뮤니티 공지사항 페이지로 이동" href="./notice.php">
+          <li role="treeitem" class="menu5">
+            <a title="커뮤니티 공지사항 페이지로 이동" href="./notice.php">
               <span>커뮤니티</span>
               <span class="en">community</span>
             </a>
             <h6>커뮤니티</h6>
-            <ul id="sidebar-menu" role="group">
-              <li id="menu" role="treeitem"><a alt="공지사항 페이지로 이동" class="menu5-1" href="./notice.php">공지사항</a></li>
-              <li id="menu" role="treeitem"><a alt="FNQ 페이지로 이동" class="menu5-2" href="./faq.php">FNQ</a></li>
-              <li id="menu" role="treeitem"><a alt="자유게시판 페이지로 이동" class="menu5-3" href="./freeboard.php">자유게시판</a></li>
+            <ul role="group">
+              <li role="treeitem"><a title="공지사항 페이지로 이동" class="menu5-1" href="./notice.php">공지사항</a></li>
+              <li role="treeitem"><a title="FNQ 페이지로 이동" class="menu5-2" href="./faq.php">FNQ</a></li>
+              <li role="treeitem"><a title="자유게시판 페이지로 이동" class="menu5-3" href="./freeboard.php">자유게시판</a></li>
             </ul>
           </li><!-- 5 -->
-          <li id="menu" role="treeitem" class="member menu6">
+          <li role="treeitem" class="member menu6">
             <a href="./login.php">
               <span>회원</span>
               <span class="en">member</span>
             </a>
             <h6>회원</h6>
             <ul role="group">
-              <li id="menu" role="treeitem"><a class="menu6-1" href="./login.php">로그인</a></li>
-              <li id="menu" role="treeitem"><a class="menu6-2" href="./register.php">회원가입</a></li>
-              <li id="menu" role="treeitem"><a class="menu6-3" href="./member.php">회원정보수정</a></li>
+              <li role="treeitem"><a title="로그인 페이지로 이동" class="menu6-1" href="./login.php">로그인</a></li>
+              <li role="treeitem"><a title="회원가입 페이지로 이동" class="menu6-2" href="./register.php">회원가입</a></li>
+              <li role="treeitem"><a title="회원정보수정 페이지로 이동" class="menu6-3" href="./member.php">회원정보수정</a></li>
             </ul>
           </li><!-- 6 -->
-          <li id="menu" role="treeitem" class="sns">
-            <a href="./notice.php">
+          <li role="treeitem" class="sns">
+            <a  href="./notice.php">
               <span>소셜</span>
               <span class="en">SNS</span>
             </a>
             <h6>SNS</h6>
-            <ul role="group">
-              <li id="menu" role="treeitem"><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
-              <li id="menu" role="treeitem"><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
-              <li id="menu" role="treeitem"><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+            <ul role="group" aria-hidden="true">
+              <li role="treeitem"><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+              <li role="treeitem"><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+              <li role="treeitem"><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
             </ul>
           </li><!-- 6 -->
         </ul><!-- menu -->
       </nav>
 
-      <button class="mbtn" role="group" aria-labelledby="{menu}">
+      <button class="mbtn">
       <i class="fa-solid fa-bars open"></i>
       <i class="fa-solid fa-xmark close"></i>
       </button>
-
     </div><!-- center -->
   </header>
 
@@ -207,16 +206,16 @@
 </section>
 
 <section class="latest">
-  <h2 class="hidden">recently</h2>
+  <h2 class="hidden" aria-hidden="true">recently</h2>
   <article class="news">
       <div class="center">
         <h3><i class="fa-regular fa-newspaper"></i>LATEST NEWS</h3>
         <div class="rolling">
-          <ul id="news" role="group">
-            <li id="news" role="treeitem">News 게시판 최시글 1번</li>
-            <li id="news" role="treeitem">News 게시판 최시글 2번</li>
-            <li id="news" role="treeitem">News 게시판 최시글 3번</li>
-            <li id="news" role="treeitem">News 게시판 최시글 4번</li>
+          <ul role="group">
+            <li role="treeitem">News 게시판 최시글 1번</li>
+            <li role="treeitem">News 게시판 최시글 2번</li>
+            <li role="treeitem">News 게시판 최시글 3번</li>
+            <li role="treeitem">News 게시판 최시글 4번</li>
           </ul>
         </div><!-- rolling -->
         <script>
@@ -239,14 +238,14 @@
         })
       </script>
 
-      <a alt="공지사항 더보기" class="more" href="./notice.php">more+</a>
+      <a title="공지사항 더보기" class="more" href="./notice.php">more+</a>
     </article>
     <article class="customer">
       <h3>customer</h3>
       <p>문의 전화 주세요.</p>
-      <a alt="전화번호 010000000" class="tel" href="tel:0100000000">
-        <i class="fa-solid fa-phone"></i></i>010-0000-0000</a>
-      <a alt="온라인페이지로 이동하기" class="mail" href="./contact.php">
+      <a title="전화번호 010000000" class="tel" href="tel:0100000000">
+        <i class="fa-solid fa-phone"></i>010-0000-0000</a>
+      <a title="온라인페이지로 이동하기" class="mail" href="./contact.php">
       <i class="fa-solid fa-envelope"></i>contact us</a>
     </article>
     <article class="gallery">
@@ -263,7 +262,7 @@
           `)
         }
       </script>
-      <a alt="갤러리 더보기" class="more" href="./gallery1.php">more+</a>
+      <a title="갤러리 더보기" class="more" href="./gallery1.php">more+</a>
     </article>
   </div>
 </section>
